reflectapi-demo/tests/errors/hidden_on_enum_tuple_variant_field.rs
#[derive(serde::Deserialize, reflectapi::Input)]
enum MyEnum {
    Variant(
        #[reflectapi(hidden)]
        u32,
    ),
}

fn main() {}
