reflectapi-demo/tests/errors/hidden_on_enum_tuple_variant_field.stderr
error: `hidden` cannot be used on unnamed (tuple) fields because removing a positional element shifts indices and breaks wire compatibility in generated clients
 --> tests/errors/hidden_on_enum_tuple_variant_field.rs:4:9
  |
4 |         #[reflectapi(hidden)]
  |         ^
